<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  android:background="@color/theme_color_press"
  android:orientation="vertical">

    <include layout="@layout/page_title"/>

    <LinearLayout
      android:layout_marginTop="7dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/white"
      android:orientation="vertical">

        <LinearLayout
          style="@style/tv_et_item">

            <TextView
              style="@style/tv_et_item_label"
              android:layout_marginRight="16dp"
              android:layout_marginEnd="16dp"
              android:text="@string/origin_psd"/>

            <EditText style="@style/tv_et_item_content"
              android:id="@+id/et_raider_title"
              android:inputType="textPassword"
              android:paddingLeft="@dimen/activity_vertical_margin"
              android:hint="@string/pls_origin_psd"/>
        </LinearLayout>

        <View style="@style/std_split"/>

        <LinearLayout
          style="@style/tv_et_item">

            <TextView
              style="@style/tv_et_item_label"
              android:layout_marginRight="16dp"
              android:layout_marginEnd="16dp"
              android:text="@string/set_psd"/>

            <EditText style="@style/tv_et_item_content"
              android:id="@+id/et_psd"
              android:inputType="textPassword"
              android:paddingLeft="@dimen/activity_vertical_margin"
              android:hint="@string/pls_new_psd"/>
        </LinearLayout>

        <View style="@style/std_split"/>

        <LinearLayout
          style="@style/tv_et_item">

            <TextView
              style="@style/tv_et_item_label"
              android:layout_marginRight="16dp"
              android:layout_marginEnd="16dp"
              android:text="@string/reset_psd"/>

            <EditText style="@style/tv_et_item_content"
              android:id="@+id/et_re_psd"
              android:inputType="textPassword"
              android:paddingLeft="@dimen/activity_vertical_margin"
              android:hint="@string/pls_confirm_psd"/>
        </LinearLayout>

        <View style="@style/std_split"/>

        <Button
          android:id="@+id/btn_modify_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dp"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:background="@drawable/buttonbule"
          android:textColor="@color/white"
          android:text="确认"/>

    </LinearLayout>

</LinearLayout>