<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:fitsSystemWindows="true"
  android:background="@color/theme_color_press"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <include layout="@layout/page_title"/>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
      android:id="@+id/ll_operator"
      android:layout_alignParentBottom="true"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <Button
        android:id="@+id/btn_add_raider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/buttonbule"
        android:textColor="@color/white"
        android:text="添加"/>

      <LinearLayout
        android:id="@+id/ll_operator_check"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
          android:id="@+id/btn_ok"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:layout_marginBottom="@dimen/activity_vertical_margin"
          android:background="@drawable/buttonbule"
          android:textColor="@color/white"
          android:text="通过"/>

        <Button
          android:id="@+id/btn_refuse"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:layout_marginBottom="@dimen/activity_vertical_margin"
          android:background="@drawable/buttonbule"
          android:textColor="@color/white"
          android:text="不通过"/>
      </LinearLayout>

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_above="@id/ll_operator"
      android:orientation="vertical">

      <LinearLayout
        style="@style/tv_et_item">

        <TextView
          style="@style/tv_et_item_label"
          android:layout_marginRight="16dp"
          android:layout_marginEnd="16dp"
          android:text="@string/raider_title"/>

        <EditText style="@style/tv_et_item_content"
          android:id="@+id/et_raider_title"
          android:hint="@string/pls_input_title"/>
      </LinearLayout>

      <LinearLayout
        android:id="@+id/ll_status"
        style="@style/tv_et_item"
        android:visibility="gone">

        <TextView
          style="@style/tv_et_item_label"
          android:layout_marginRight="16dp"
          android:layout_marginEnd="16dp"
          android:text="@string/raider_status"/>

        <TextView style="@style/tv_et_item_content"
          android:textColor="@color/red"
          android:id="@+id/tv_status" />
      </LinearLayout>

      <LinearLayout
        style="@style/tv_et_item"
        android:layout_height="match_parent">

        <TextView
          style="@style/tv_et_item_label"
          android:gravity="top"
          android:layout_height="match_parent"
          android:paddingTop="@dimen/activity_vertical_margin"
          android:layout_marginRight="16dp"
          android:layout_marginEnd="16dp"
          android:text="@string/raider_content"/>

        <ScrollView
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText style="@style/tv_et_item_content"
              android:id="@+id/et_raider_content"
              android:hint="@string/pls_input_raider_content"/>
          </LinearLayout>
        </ScrollView>

      </LinearLayout>
    </LinearLayout>
  </RelativeLayout>
</LinearLayout>